src/main/script/backend-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  labels:
    name: postgres-pod
    app: demo-customer-app
spec:
  containers:
  - name: postgres
    image: postgres:9.4
    ports:
    - containerPort: 5432
