src/main/script/deployment-account.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: account-service
  labels:
    run: account-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: account-service
    spec:
      containers:
      - name: account-service
        image: ashaushus/myaccount:v10
        ports:
        - containerPort: 2222
          protocol: TCP
      - name: postgres
        image: postgres:10.4
        imagePullPolicy: "IfNotPresent"
        ports:
          - containerPort: 5432
            protocol: TCP
