src/main/script/account-service.yml
kind: Service
apiVersion: v1
metadata:
  name: account-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: account-svc-pod
    app: demo-customer-app
