src/main/script/service-account.yml
kind: Service
apiVersion: v1
metadata:
  name: account-service
spec:
  selector:
    run: account-service
  ports:
  - name: port1
    protocol: TCP
    port: 2222
    targetPort: 2222
  - name: port2
    protocol: TCP
    port: 27017
    targetPort: 27017
  type: NodePort
