src/main/script/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/service-upstream: "true"
spec:
  backend:
    serviceName: ghost
    servicePort: 80
  rules:
  - host: micro.all
    http:
      paths:
      - path: /account
        backend:
          serviceName: account-service
          servicePort: 2222
  - host: micro.all
    http:
      paths:
      - path: /customer
        backend:
          serviceName: customer-service
          servicePort: 3333
